tests/snapshots/examples_fixtures/Debug__runtime_trace_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Debug/runtime_trace_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify matching '+' operands (Int+Int, Float+Float, or String+String) with Int and Unit.

  --> examples/Debug/runtime_trace_error.flx:3:3
  |
3 |   1 + None;
  |   ^^^^^^^^
  |   -------- expected matching '+' operands (Int+Int, Float+Float, or String+String), found Int and Unit
  |   -------- operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion
== stdout ==
<not executed>
